# cl-adaptation

./: .gitignore  .gitmodules  README.md  checkpoints_paths.csv  pyproject.toml
experiments/cifar/: noreg_cifar_5_10_20_tasks.yaml  reg_cifar_5_10_20_tasks.yaml
experiments/imagenet/: noreg_imagenet_10_20_tasks.yaml  reg_imagenet_10_20_tasks.yaml
notebooks/: ablation-models.ipynb  big_task_2.csv  check_features_dim.ipynb  cms.ipynb  ewc_imagent_seeds.csv  forward_backawrd_transfer.ipynb  mine.ipynb  models-probing.ipynb  models.ipynb  new.tex  notebook.ipynb  rebuttal.ipynb  rebuttal_analyze_weights.ipynb  representations.ipynb  sign_mas.ipynb  sign_mas_viz.ipynb  sign_mass_new.ipynb  svd.ipynb  tables.ipynb  test_weights.ipynb  try_convnext.ipynb  w.py  weights.ipynb  weights_new.ipynb
notebooks/2025/: all.csv  all_in_one.ipynb  allinone.csv  analyze_wandb.ipynb  analyze_wandb_23.ipynb  analyze_wandb_25.ipynb  analyze_wandb_27.ipynb  analyze_wandb_28.ipynb  core.py  dump_results.ipynb  dump_results_23.ipynb
runs/: interactive.sh
runs/debug/: ssil.yaml  xxx.yaml
src/: gridsearch.py  gridsearch_config.py  last_layer_analysis.py  main_incremental.py  main_reg.py  utils.py
src/analysis/: core.py  forward_transfer.py  linear_probing.py  svd.py  weights.py
src/approach/: bic.py  dmc.py  eeil.py  ewc.py  finetuning.py  freezing.py  gdumb.py  icarl.py  il2m.py  joint.py  lucir.py  (+8 more)
utils/: analyze_weights.py  find_errors.py  generate_activs.py  generate_plots.py  generate_plots_refactor.py  hist.py  submit_hydra.py  submit_plots.py  submit_runs.py  tar_symlink.py
(+541 files in other folders)
